fixed emojibox z-index trans issue

--- a/src/components/message/messageLog/css/messageLog.css
+++ b/src/components/message/messageLog/css/messageLog.css
@@ -53,7 +53,7 @@
 
 .messageBoxDate {
   font-size: 12px;
-  margin: 10px 0 10px 0;
+  margin: 10px 0;
   color: #949494;
   align-self: center;
 }
@@ -74,7 +74,7 @@
 .messageBoxText {
   padding: 11px 13px 11px 13px;
   max-width: 500px;
-  margin-top: 10px;
+  margin-top: 7.5px;
   border-radius: 0 0 3px 3px;
   display: flex;
   flex-shrink: 0;
